added nodemailer, made form, adjusted server to handle transfer, added styling

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,1 +1,10 @@
-h1 Node Contact Form Example
+extends layout
+
+block content
+	div.info-container
+		h1 Node Contact Form Example
+
+		p
+			A small example contact form example made using Nodemailer, ExpressJS and Pug
+
+		a(href='/contact') Go to contact
